<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:autoMirrored="true"
                android:src="@drawable/back_drawable" />

            <com.delivery.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enter_details_register"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_14sdp" />

            <com.delivery.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.delivery.app.Utils.MyEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.delivery.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"

                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.delivery.app.Utils.MyEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1">

                    <com.delivery.app.Utils.MyEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.delivery.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:ccp_defaultNameCode="my" />

                <com.delivery.app.Utils.MyEditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1" />

            </LinearLayout>

            <com.delivery.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">


                <RadioButton
                    android:id="@+id/normal_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:checked="true"
                    android:drawablePadding="@dimen/_20sdp"
                    android:text="@string/normal_user" />

                <RadioButton
                    android:id="@+id/business_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/business_user" />

                <RadioButton
                    android:id="@+id/senior_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_20sdp"
                    android:text="@string/senior_user" />

                <LinearLayout
                    android:id="@+id/image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/doc_state_id"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/doc_placeholder"
                            tools:ignore="ContentDescription" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/doc_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/state_id"
                            android:textSize="@dimen/_13sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            tools:ignore="RtlHardcoded" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/doc_medical_id"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/doc_placeholder"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/doc_image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/medical_id"
                            android:textSize="@dimen/_13sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>

            </RadioGroup>

            <com.delivery.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_35sdp">

                <com.delivery.app.Utils.MyEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_right" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
