<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.delivery.app.Utils.MyBoldTextView
                android:id="@+id/trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/trip"
                android:textColor="@color/blue_dark" />

            <ImageView
                android:id="@+id/status_img"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:src="@drawable/radio_btn_grey"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imgGotoPhoto"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:src="@drawable/ic_attach"
                android:tint="@color/black"
                android:visibility="gone" />
        </RelativeLayout>

        <com.delivery.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/delivery_address"
            android:textColor="@color/black_text_color" />

        <com.delivery.app.Utils.MyTextView
            android:id="@+id/destination_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/sample_address" />

        <com.delivery.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/comments"
            android:textColor="@color/black_text_color" />

        <com.delivery.app.Utils.MyTextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/comments" />
    </LinearLayout>
</androidx.cardview.widget.CardView>