<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.delivery.app.com.valamm.app.Activities.LocationAndGoodsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/back_drawable" />

        <com.delivery.app.Utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/what_are_moving_for_u"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/submit_btn"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_above="@+id/submit_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/ic_add"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_height="wrap_content" />

    <com.delivery.app.Utils.MyButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

</RelativeLayout>
